--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,9 +2,12 @@ body {
   margin: 0;
   padding: 0;
   width: 100%;
-  font-family: "Whitney", -apple-system, BlinkMacSystemFont, "Segoe UI",
+
+  /* font-family: "Whitney", -apple-system, BlinkMacSystemFont, "Segoe UI",
     "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
-    "Helvetica Neue", sans-serif;
+    "Helvetica Neue", sans-serif; */
+  font-family: Whitney, Whitney Semibold, -apple-system, BlinkMacSystemFont,
+    Segoe UI, Roboto, Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -19,4 +22,72 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+@font-face {
+  font-family: "Whitney";
+  font-style: normal;
+  font-weight: 500;
+  src: local("Whitney"),
+    url("https://fonts.cdnfonts.com/s/38487/whitneymedium.woff") format("woff");
+}
+@font-face {
+  font-family: "Whitney";
+  font-style: italic;
+  font-weight: 500;
+  src: local("Whitney"),
+    url("https://fonts.cdnfonts.com/s/38487/whitneymediumitalic.woff")
+      format("woff");
+}
+@font-face {
+  font-family: "Whitney";
+  font-style: normal;
+  font-weight: 700;
+  src: local("Whitney"),
+    url("https://fonts.cdnfonts.com/s/38487/whitneybold.woff") format("woff");
+}
+@font-face {
+  font-family: "Whitney Semibold";
+  font-style: normal;
+  font-weight: 500;
+  src: local("Whitney Semibold"),
+    url("https://fonts.cdnfonts.com/s/38487/whitneysemibold.woff")
+      format("woff");
+}
+@font-face {
+  font-family: "Whitney Book";
+  font-style: normal;
+  font-weight: 500;
+  src: local("Whitney Book"),
+    url("https://fonts.cdnfonts.com/s/38487/whitneybook.woff") format("woff");
+}
+@font-face {
+  font-family: "Whitney Light";
+  font-style: normal;
+  font-weight: 500;
+  src: local("Whitney Light"),
+    url("https://fonts.cdnfonts.com/s/38487/whitneylight.woff") format("woff");
+}
+@font-face {
+  font-family: "Whitney Semibold";
+  font-style: italic;
+  font-weight: 500;
+  src: local("Whitney Semibold"),
+    url("https://fonts.cdnfonts.com/s/38487/WhitneySemiboldItalic.woff")
+      format("woff");
+}
+@font-face {
+  font-family: "Whitney Book";
+  font-style: italic;
+  font-weight: 500;
+  src: local("Whitney Book"),
+    url("https://fonts.cdnfonts.com/s/38487/whitneybookitalic.woff")
+      format("woff");
+}
+@font-face {
+  font-family: "Whitney Light";
+  font-style: italic;
+  font-weight: 500;
+  src: local("Whitney Light"),
+    url("https://fonts.cdnfonts.com/s/38487/whitneylightitalic.woff")
+      format("woff");
 }
