--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,7 +6,7 @@ body {
   /* font-family: "Whitney", -apple-system, BlinkMacSystemFont, "Segoe UI",
     "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
     "Helvetica Neue", sans-serif; */
-  font-family: Whitney, Whitney Semibold, -apple-system, BlinkMacSystemFont,
+  font-family: "Whitney", "Whitney Semibold", -apple-system, BlinkMacSystemFont,
     Segoe UI, Roboto, Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -webkit-font-smoothing: antialiased;
