--- a/admin/src/pages/product/product.css
+++ b/admin/src/pages/product/product.css
@@ -10,13 +10,14 @@
 }
 
 .productAddButton {
-  width: 80px;
+  width: 200px;
   border: none;
-  padding: 5px;
-  background-color: teal;
+  padding: 5px 0;
+  background-color: #f64a72;
   color: white;
   border-radius: 5px;
   font-size: 16px;
+  margin-right: 50px;
   cursor: pointer;
 }
 
@@ -26,7 +27,8 @@
 
 .productTopLeft,
 .productTopRight {
-  flex: 1;
+  flex: 1 1 400px;
+  max-width: 550px;
 }
 
 .productTopRight {
@@ -96,11 +98,11 @@
   border-bottom: 1px solid gray;
 }
 
-.productFormLeft >select{
+.productFormLeft > select {
   margin-bottom: 10px;
 }
 
-.productUploadImg{
+.productUploadImg {
   width: 100px;
   height: 100px;
   border-radius: 10px;
@@ -108,23 +110,28 @@
   margin-right: 20px;
 }
 
-.productFormRight{
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
+.productFormRight {
+  display: block;
+  /* flex-direction: column; */
+  /* justify-content: space-around; */
 }
 
-.productUpload{
+.productUpload {
   display: flex;
   align-items: center;
 }
 
-.productButton{
+.productButton {
+  width: 200px;
+  font-family: Arial, Helvetica, sans-serif;
   border: none;
-  padding: 5px;
+  padding: 10px 0px;
   border-radius: 5px;
-  background-color: darkblue;
-  color:white;
-  font-weight: 600;
+  background-color: #ff3e6c;
+  color: #fff;
+  letter-spacing: 0.5px;
+  font-weight: 500;
+  font-size: 16px;
   cursor: pointer;
+  float: right;
 }
