--- a/admin/src/pages/product/product.css
+++ b/admin/src/pages/product/product.css
@@ -122,7 +122,21 @@
 }
 
 .productButton {
-  width: 200px;
+  /* width: 150px; */
+  font-family: Arial, Helvetica, sans-serif;
+  border: none;
+  padding: 5px 5px;
+  border-radius: 5px;
+  background-color: #ff3e6c;
+  color: #fff;
+  letter-spacing: 0.5px;
+  font-weight: 500;
+  font-size: 12px;
+  cursor: pointer;
+  float: right;
+}
+.productUpdateButton {
+  width: 350px;
   font-family: Arial, Helvetica, sans-serif;
   border: none;
   padding: 10px 0px;
@@ -131,7 +145,7 @@
   color: #fff;
   letter-spacing: 0.5px;
   font-weight: 500;
-  font-size: 16px;
+  font-size: 18px;
   cursor: pointer;
-  float: right;
+  margin-top: 50px;
 }
