--- a/admin/src/pages/productList/productList.css
+++ b/admin/src/pages/productList/productList.css
@@ -1,13 +1,38 @@
 .productList {
-  flex: 4;
+  display: flex;
+  width: 100%;
   outline: none;
+  position: relative;
+  flex-direction: column;
 }
 div {
   outline: none;
 }
+.newproduct {
+  outline: none;
+  text-decoration: none;
+  background-color: #ff3c6f;
+  /* width: 200px;
+  height: 30px; */
+  padding: 5px 10px;
+  text-align: center;
+  position: absolute;
+  right: 20px;
+  border-radius: 5px;
+  margin: 5px 0 40px 0;
+  cursor: pointer;
+}
+.newproduct a {
+  color: #fff;
+  text-align: center;
+}
+.dataGrid {
+  margin-top: 50px;
+}
 .productListItem {
   display: flex;
   align-items: center;
+  position: relative;
 }
 
 .productListImg {
